# Reinforcement-Learning-Specialization

./: pyproject.toml
Fundamentals of Reinforcement Learning/Week 1/Notebook: Bandits and Exploration-Exploitation/: C1M1-Assignment1-v8.ipynb  C1M1-Assignment1-v9.ipynb
Fundamentals of Reinforcement Learning/Week 4/Notebook: Optimal Policies with Dynamic Programming/: C1M4_Assignment2-v3.ipynb
Prediction and Control with Function Approximation/Week 1/Notebook: Semi-gradient TD(0) with State Aggregation/: C3M1_Assignment1-v8.ipynb
Prediction and Control with Function Approximation/Week 2/Notebook: Semi-gradient TD with a Neural Network/: C3M2_Assignment2-v7.ipynb
Sample-based Learning Methods/Week 3/Notebook: Policy Evaluation with Temporal Difference Learning/: C2M2-Assignment-v4.ipynb
Sample-based Learning Methods/Week 4/Notebook: Q-Learning and Expected Sarsa/: C2M3_Assignment2_v6.ipynb
Sample-based Learning Methods/Week 5/Notebook: Dyna-Q and Dyna-Q+/: Planning_Assignment-v2.ipynb
