[tool.poetry]
name = "reinforcement-learning-specialization"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "reinforcement_learning_specialization"}]

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.2"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
